--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,11 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              {
+                "glob": "*.svg",
+                "input": "./node_modules/bootstrap-icons/",
+                "output": "/"
+              },
               "src/favicon.ico",
               "src/assets"
             ],
